# makemore

./: pyproject.toml
scripts/: building-wavenet.ipynb  diving-deep-backprop.ipynb  makemore-actiivations-grads-batchnorm.ipynb  makemore.ipynb  makemoreMLP.ipynb  makemorebigram.ipynb
